# vsl

./: .claudeignore  .gitignore  CLAUDE.md  Dockerfile.build  LICENSE  README.md  check_env.sh  docker-compose.yml  run_vr.sh
.github/workflows/: ci.yml
docs/: design_decisions.md
godot/: CLAUDE.md
godot/project/: mission_params.json  openxr_action_map.tres  project.godot
godot/project/cad/: rocket_template.scad
godot/project/scenes/: analysis_panel.tscn  budget_panel.tscn  control_panel.tscn  earth.tscn  main.tscn  mission_design_panel.tscn  mission_timeline.tscn  obdh_panel.tscn  orbit_viewer.tscn  payload_panel.tscn  power_panel.tscn  rocket_design_panel.tscn  thermal_panel.tscn  trajectory_panel.tscn  ttc_panel.tscn
godot/project/scripts/: analysis_panel.gd  budget_panel.gd  cad_exporter.gd  cad_gizmo.gd  control_panel.gd  earth_renderer.gd  main_scene.gd  mission_design_panel.gd  mission_params_io.gd  mission_timeline.gd  obdh_panel.gd  orbit_renderer.gd  payload_panel.gd  power_panel.gd  rocket_design_panel.gd  sat_marker.gd  solver_bridge.gd  thermal_panel.gd  trajectory_panel.gd  ttc_panel.gd  vr_controller.gd  vr_ui_panel.gd
godot/project/shaders/: earth_atmosphere.gdshader  orbit_line.gdshader  sat_glow.gdshader
godot/project/textures/earth/: download.sh
main/: CLAUDE.md  CMakeLists.txt
main/src/: double_buffer.h  file_watcher.h  godot_bridge.cpp  godot_bridge.h  julia_api.h  julia_solver.cpp  main.cpp  mission_params.h  mission_params_loader.cpp  mission_params_loader.h
main/tests/: integration_test.cpp
notas/decisoes/: 2026-05-05_fallback-desktop-vr.txt  2026-05-05_nome-pacote-satelitetoolbox.txt  _template.txt
notas/operacao/: _template.txt
paper/: CLAUDE.md  Dockerfile  paper.bib  paper.md
paper/figures/: architecture_diagram.tex
solver/: CLAUDE.md  Dockerfile  Manifest.toml  Project.toml  generate_trajectory_json.jl
solver/notebooks/: 01_orbit_validation.jl  02_mission_analysis.jl  03_mdo_demo.jl  phase3_validation.jl
solver/notes/trajectory/: MANUAL_EDIT.txt  session_2026-05-11.txt  sixdof.txt
solver/scripts/: build_sysimage.jl
solver/src/: VSLSolver.jl  aero_geometry.jl
solver/src/export/: c_api.jl
solver/src/mdo/: engine.jl
solver/src/mission/: eclipse.jl  link_budget.jl  power_budget.jl  report.jl
solver/src/orbital/: access.jl  maneuvers.jl  propagation.jl
solver/src/trajectory/: aerodynamics.jl  atmosphere.jl  propulsion.jl  sixdof.jl
solver/test/: precompile_hints.jl  runtests.jl
solver/test/mission/: test_access.jl  test_eclipse.jl
solver/test/orbital/: test_maneuvers.jl  test_propagation.jl
solver/test/trajectory/: test_sixdof.jl
